tests/ui/type-alias-impl-trait/nested-tait-inference3.stderr
error: item does not constrain `FooX::{opaque#0}`, but has it in its signature
  --> $DIR/nested-tait-inference3.rs:12:4
   |
LL | fn foo() -> impl Foo<FooX> {
   |    ^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/nested-tait-inference3.rs:6:13
   |
LL | type FooX = impl Debug;
   |             ^^^^^^^^^^

error: aborting due to 1 previous error

